fix: adding overflow hidden to panel to try and prevent scrolling on mobile

--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -137,6 +137,7 @@ section {
       .panel {
         margin-top: 3px;
         height: 100%;
+        overflow: hidden;
 
         &_left {
           background-color: $white;
